// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button: Component should render correctly 1`] = `
<Component>
  <ButtonComponent
    customStyles={Object {}}
    disabled={false}
    inverse={false}
    size="BIG"
  >
    <button
      disabled={false}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#1d1d20",
          "border": "none",
          "borderRadius": "30px",
          "color": "#FFF",
          "cursor": "pointer",
          "display": "flex",
          "fill": "#FFF",
          "fontSize": "20px",
          "justifyContent": "center",
          "margin": "0",
          "minHeight": "48px",
          "outline": "none",
          "padding": "0",
          "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
        }
      }
    >
      button
    </button>
  </ButtonComponent>
</Component>
`;

exports[`Button: Component should render with custom styles 1`] = `
<Component
  customStyles={
    Object {
      "backgroundColor": "red",
    }
  }
>
  <ButtonComponent
    customStyles={
      Object {
        "backgroundColor": "red",
      }
    }
    disabled={false}
    inverse={false}
    size="BIG"
  >
    <button
      disabled={false}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "red",
          "border": "none",
          "borderRadius": "30px",
          "color": "#FFF",
          "cursor": "pointer",
          "display": "flex",
          "fill": "#FFF",
          "fontSize": "20px",
          "justifyContent": "center",
          "margin": "0",
          "minHeight": "48px",
          "outline": "none",
          "padding": "0",
          "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
        }
      }
    >
      button
    </button>
  </ButtonComponent>
</Component>
`;
